# Dairyx-backend

./: .gitignore  Cargo.toml  README.md
migrations/: 20251107095859_initial_schema.sql  20251107104548_initial_schema.sql  20251110120000_add_batch_receipts.sql  20251111120000_add_truck_loads.sql  20251111130000_add_shops_distance.sql  20251112120000_add_allowance_management.sql  20251112130000_create_stock_movements.sql  20251112130001_create_reconciliation_tables.sql  20251112130002_fix_sale_item_quantity_trigger.sql
postman/: ALLOWANCE_API_EXAMPLES.md  BATCHES_API_EXAMPLES.md  DairyX.local.postman_environment.json  DairyX.postman_collection.json  POSTMAN_EXAMPLES.md  SALES_API_EXAMPLES.md  TRUCK_LOADS_API_EXAMPLES.md
src/: error.rs  main.rs
src/auth/: jwt.rs
src/database/: connections.rs
src/dtos/: allowance.rs  batch.rs  delivery.rs  mod.rs  product.rs  reconciliation.rs  sale.rs  shop.rs  truck.rs  truck_load.rs  user.rs
src/handlers/: allowance.rs  batch.rs  delivery.rs  mod.rs  product.rs  reconciliation.rs  sale.rs  shop.rs  stock_movement.rs  truck.rs  truck_load.rs  user.rs
src/middleware/: auth.rs
src/models/: product.rs  user.rs
src/routes/: allowances.rs  batches.rs  deliveries.rs  mod.rs  products.rs  reconciliations.rs  sales.rs  shops.rs  stock_movements.rs  truck_loads.rs  trucks.rs  users.rs
src/state/: app_state.rs
testing/: OPTION_A_IMPLEMENTATION_SUMMARY.md  REGRESSION_TEST_RESULTS.md  test_endpoints.sh  test_sales_api.sh
