[package]
name = "dairyx-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework (like Spring Web)
axum = "0.8.5"

# Async runtime (like @Async)
tokio = { version = "1.0", features = ["full"] }

# Database (like Spring Data JPA)
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono"] }

# JSON serialization (like Jackson)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Environment variables (like @Value)
dotenvy = "0.15"

# HTTP types (like HttpStatus)
http = "1.2"
hyper = "1.7"

# Authentication (like Spring Security)
# Enable a crypto backend for jsonwebtoken v10+
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
bcrypt = "0.17"

# CORS middleware (like @CrossOrigin)
tower-http = { version = "0.6", features = ["cors"] }

# Logging (like SLF4J)
tracing = "0.1"
tracing-subscriber = "0.3"



[dev-dependencies]
# Test dependencies
tokio = { version = "1.0", features = ["full"] }



